--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,4 +1,14 @@
 rootProject.name = 'ISF'
+include ':react-native-sound'
+project(':react-native-sound').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-sound/android')
+include ':react-native-sound'
+project(':react-native-sound').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-sound/android')
+include ':react-native-animated-border'
+project(':react-native-animated-border').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-animated-border/android')
+include ':react-native-animated-border'
+project(':react-native-animated-border').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-animated-border/android')
+include ':react-native-animated-border'
+project(':react-native-animated-border').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-animated-border/android')
 include ':react-native-svg'
 project(':react-native-svg').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-svg/android')
 include ':react-native-tts'
