--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "react-native": "0.63.3",
     "react-native-gesture-handler": "^1.8.0",
     "react-native-paper": "^4.7.0",
+    "react-native-progress": "^4.1.2",
     "react-native-progress-circle": "^2.1.0",
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.15.0",
     "react-native-sound": "^0.11.0",
     "react-native-svg": "^12.1.0",
+    "react-native-table-component": "^1.2.1",
     "react-native-tts": "^3.2.0",
     "react-native-vector-icons": "^7.1.0",
     "react-navigation": "^4.4.3",
